--- a/bio.html
+++ b/bio.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <link rel="stylesheet" type="text/css" href="site.css">
+  <title>Biography</title>
   <head>
     <div class="topbanner">
       <img class="profilepic" alt="LinkedIn Profile Picture" src="https://media-exp1.licdn.com/dms/image/C5603AQHtfSzGxoMnoQ/profile-displayphoto-shrink_200_200/0?e=1599091200&v=beta&t=oHFMFikAG49re2xUJKE8XyWbZTqph8YZn2j4UKjAx-8">
@@ -14,30 +15,22 @@
     </div>
   </head>
   <body>
-    <title>My Story</title>
+    <h2>My Background</h2>
     <p>
-      Growing up in Corvallis, I grew up watching Jaquizz Rodgers and the OSU Neavers fill Reser Stadium every Saturday. I still remember frequenting the Old-World-Deli, where the staff were always kind enough to invite me into their establishment with a sandwhich made from scratch.
+      I grew up in Corvallis, nestled in the beautiful scenery of the Willamete Valley and listening the roar of Reser Stadium every Saturday.
+      <br>
+      I began my higher education as a math major at the historic Oregon State University, a cornerstone of the Oregonian economy and an institution widely heralded for its research activity. Ironically, I ended up transferring to the rival school: the University of Oregon. It certainly seems fitting that I grew up watching the Beavers destroyed year after year in the... competitively named "civil war", only to transfer the year the tides turned!
+      <br>
+      Since joining the ducks and switching to economics, I've been thrilled with the quality of my education. Here at the U of O I've spent my time learning cutting edge forecasting techniques with Professor Tim Duy, observing the diverse effects of local ecosystems on Oregonian economies with Professor Ed Whitelaw, understanding core market structures with Keaton Miller, exploring the impacts of socio-economic environments with Professor Ben Hansen, empowering myself via the programming language R under Doctoral Students Luciana Etcheverry (Instructor) and Connor Lennon (TA), and scaling up into the big data arena with Asst. Professor Grant McDermott. Each of these teachers has given me benefits both intangible and observable.
     </p>
     <p>
-      I went to highschool at Crescent Valley, located in the hills of Northern Corvallis, where stepping outside the inner courtyard transported you to rural Oregon in all its glory. While I was there, I played Ultimate Frisbee for their program, winning state championships, as well as competing at the National Youth Club Championships. I was fortunate enough to be a part of some successful teams, including the Oregon Flood team in 2014 which was crowned champions of the mixed division that year.
+      Since my first memorable years as an elementary student, I've been blessed with a knack for mathematics. While the statement may seem arrogant at first, it is clearly a credit to the influence of having dual mathematicians for parents. However, a consistent frustration of mine was the abstract nature of many techniques learned from geometry or calculus, showing no utility beyond the hypothetical word problems asking how fast a train is going.
     </p>
     <p>
-      After a brief stint in football during college, where I played for the Eugene City Bills as a safety, I decided to focus on my studies and for preparing myself for the first stage of my career. Currently, I am treasurer of the UO Brazillian Jiu Jitsu Club, where I have been practicing and sparring for a year and a half.
+      My choice to delve into the world of economics has exposed the techniques beat into my head with pre-algebra worksheets to real world scenarios and issues. Whereas before graphs were used to depict hypothetical limits to how much "Jimmy" could eat, now my teachers gave explicit and effective frameworks by which to describe human behavior in magnitudes of scale I thought were relegated to government super computers. My most cherished skill from my time here is specifically the experience I have gained with the R programming language. The interconnected nature of our digital world now allows an infinite playground for our curiosity, allowing insights and progress in issues considered insurmountinable and on scales we thought unimaginable.
     </p>
     <p>
-      I began my college career at Oregon State University. For any that know the local quirks of our relationship, this could be considered a strange move. Every year the football game between us is compared to a civil war, with each side ever increasing in competitiveness. Ironically, after years of watching the Ducks destroy my home team, the first time I watched the Beavers win the grudge match was the year I transferred to the loosing side.
-    </p>
-    <p>
-      Nevertheless, my journey here at the University of Oregon has been incredible. I came into my college career with no vision of what I wanted to do afterwards. The son of two mathematicians, I chose math as my major and never gave it a second thought. However, the sometimes unwieldy, abstract nature of the subject often discourged sentiments that such knowledge would actually be useful after college. My foray into Economics has eliminated all such thought. From the tireless work of my educators to describe useful theory to the focus on implementing the programming language R, I have access to the necessary tools to begin creating reports and summaries that hold weight. Whereas before I could only imagine the questions necessary to describe operations and organizations of scale, now big data is an incredible resource.
-    </p>
-    <p>
-      From describing the impact of macro-economic variables such as consumer sentiment, to the study of changes in global retail, to the results of a survey, the tools given to me have already pulled their weight. An example of this occured during my junior year of college, when I met a man named Mathew at a university career fair. Learning that he worked for a non-profit called ShelterCare, I asked if there were any opportunities to utilize my skills. In return, he gave me an excel spreadsheet with employee satisfaction survey results. I was tasked with making use of this information, which I fulfilled by creating a methodology for utilizing such data in conjunction with workplace initiatives to improve the work environment. This project can be seen within my portfolio, along with others.
-    </p>
-    <p>
-      I have been spending much of my time during these uncertain times creating projects showcasing my limited programming knowledge, and I am excited to further gain influence and expertise in approaching data driven questions. From exploring the origins of American political thought to the forecast of uncertain futures, I am confident that the skills I bring to the table will be an asset for organizations looking to attack data driven issues.
-    </p>
-    <p>
-      Please take a look at my projects, or look through my resume and other documents. Also feel free to contact me for information about future opportunities, including temporary assignments like my collaboration with ShelterCare.
+      I look forward to the opportunity of working with such questions on a daily basis in a role that allows such work to help organizations achieve their perspective goals. This is the fundamental motive behind my interest in data science. To evaluate my current skillset, check out the projects tab to look through some previous adventures.
     </p>
   </body>
 </html>
