Added athletic history to my bio

--- a/bio.html
+++ b/bio.html
@@ -17,7 +17,7 @@
   <body>
     <h2>My Background</h2>
     <p>
-      I grew up in Corvallis, nestled in the beautiful scenery of the Willamete Valley and listening the roar of Reser Stadium every Saturday.
+      I grew up in Corvallis, nestled in the beautiful scenery of the Willamete Valley and listening the roar of Reser Stadium every Saturday. I went to high school at Crescent Valley, where I had the privilege of playing ultimate frisbee competitively. Over the course of 5 years, our team won many state championships in the mixed division. Also, I was able to take part in an Oregon All-Star team, named "Oregon Flood", which took home the gold in the YCC 2014 Mixed division. Since hanging up my cleats, I've begun practicing Brazillian Jiu Jitsu with a local club.
     <p>
       I began my higher education as a math major at the historic Oregon State University, a cornerstone of the Oregonian economy and an institution widely heralded for its research activity. Ironically, I ended up transferring to the rival school: the University of Oregon. It certainly seems fitting that I grew up watching the Beavers destroyed year after year in the... competitively named "civil war", only to transfer the year the tides turned!
     </p>
