--- a/documents/index.html
+++ b/documents/index.html
@@ -7,10 +7,10 @@
       <img class="profilepic" alt="LinkedIn Profile Picture" src="https://media-exp1.licdn.com/dms/image/C5603AQHtfSzGxoMnoQ/profile-displayphoto-shrink_200_200/0?e=1599091200&v=beta&t=oHFMFikAG49re2xUJKE8XyWbZTqph8YZn2j4UKjAx-8">
     </div>
     <div class="topnav">
-      <a href="https://ibogley.github.io/website/index.html">Home</a>
-      <a href="https://ibogley.github.io/website/projects.html">Projects</a>
-      <a href="https://ibogley.github.io/website/documents.html">Documents</a>
-      <a href="https://ibogley.github.io/website/bio.html">Biography</a>
+      <a href="https://ibogley.github.io/website/">Home</a>
+      <a href="https://ibogley.github.io/website/projects/">Projects</a>
+      <a href="https://ibogley.github.io/website/documents/">Documents</a>
+      <a href="https://ibogley.github.io/website/bio/">Biography</a>
     </div>
   </head>
   <body>
