--- a/bio/index.html
+++ b/bio/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-  <link rel="stylesheet" type="text/css" href="site.css">
+  <link rel="stylesheet" type="text/css" href="../site.css">
   <title>Biography</title>
   <head>
     <div class="topbanner">
