--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
           <br>
           <a href="https://www.linkedin.com/in/ian-bogley-857088196/">LinkedIn Profile</a>
           <br>
+          <a href="https://www.kaggle.com/ianbogley">Kaggle Profile</a>
+          <br>
           <a href="mailto: ibogley@uoregon.edu">ibogley@uoregon.edu</a>
           <br>
           541-829-2116
