--- a/bio/index.html
+++ b/bio/index.html
@@ -37,16 +37,21 @@
         <div class="main">
           <h2>My Background</h2>
           <p>
-            I grew up in Corvallis, nestled in the Willamete Valley and listening the roar of Reser Stadium every Saturday. My high school days were spent at Crescent Valley, where I had the privilege of playing ultimate frisbee competitively. Over the course of 5 years, our team won state championships in the mixed division, and during the summers I was able to take part in an Oregon All-Star team, named "Oregon Flood", which took home the gold in the YCC 2014 Mixed division. Since hanging up my cleats, I've begun practicing Brazillian Jiu Jitsu with the UO BJJ club.
-          <p>
-            I began my higher education as a math major at Oregon State University. Ironically, I ended up transferring to the rival school: the University of Oregon, where I studied economics, business administration, and mathematics.
+            I grew up in Corvallis, Oregon, hometown of Oregon State University. Through the years, I spent a lot of time on various fields playing sports like baseball, soccer, and ultimate frisbee.
           </p>
           <p>
-            Here at the U of O I've spent my time learning about cutting edge forecasting techniques, the diverse effects of local ecosystems on Oregonian economies,  industrial organization, the impacts of socio-economic environments, unraveling the web of globalisation, studying macroeconmic modeling and policy, discovering the programming language R, as well as scaling up into the big data arena. Each of these teachers has given me benefits both intangible and observable.
+            My college career actually began at OSU, but I transfered to the University of Oregon at the end of my Freshman year. Since the switch, I switched majors from Mathematics to Economics and ended up becoming a graduate student as well.
           </p>
           <p>
-            I look forward to the opportunity of utilize my curiousity on a daily basis in a role that allows such work to help organizations achieve their perspective goals. Whether in the private, public, or non-profit sectors, I judge my success based on the value I bring to my collegues. To evaluate my current skillset, check out the projects tab to look through some previous adventures.
+            Graduating this December with a Master's degree in Applied Economics at the U of O, I have spent my time focusing on my passion: clear communication of information in the pursuit of improved problem-solving.
           </p>
+          <p>
+            There are a lot of problems out there. As an American I believe our finest attribute is the spirit of compromise and curiousity with which we operate. We want information so that we can solve problems, in the hopes that if we keep solving them one-by-one, we can improve the lives of ourselves and others through voluntary cooperation. I look forward to the opportunity to add my name to this work.
+          </p>
+          <p>
+            <b>I hope you enjoyed my website, feel free to email me at ibogley@uoregon.edu with suggestions or improvements! Thank you for reading!</b>
+          </p>
+          <p> <b>-- Ian</b> </p>
         </div>
       </div>
   </body>
