updated website with initial changes

--- a/bio/index.html
+++ b/bio/index.html
@@ -36,17 +36,25 @@
         </div>
         <div class="main">
           <h2>My Background</h2>
+          <h3>High School</h3>
           <p>
-            I grew up in Corvallis, Oregon, hometown of Oregon State University. Through the years, I spent a lot of time on various fields playing sports like baseball, soccer, and ultimate frisbee.
+            I went to Crescent Valley High school in Corvallis, OR. While there, I enjoyed playing ultimate frisbee competitively.
           </p>
+          <h3>Undergraduate</h3>
           <p>
-            My college career actually began at OSU, but I transfered to the University of Oregon at the end of my Freshman year. Since the switch, I switched majors from Mathematics to Economics and ended up becoming a graduate student as well.
+            I began my career at my hometown university of Oregon State, before transferring to the University of Oregon during my freshman year. Soon after, I switched my major from math to economics, while taking two minors in business administration and mathematics.
           </p>
+          <h3>Graduate</h3>
           <p>
-            Graduating this December with a Master's degree in Applied Economics at the U of O, I have spent my time focusing on my passion: clear communication of information in the pursuit of improved problem-solving.
+            I had the opportunity to take the 1 year accelerated Applied Master's program here at the University of Oregon. My studies focused on Data Science, Empirical Research, Public Policy, and International Trade. I will graduate in December of 2021.
           </p>
+          <h3>Summer 2021: Intern at International Development Group LLC</h3>
           <p>
-            There are a lot of problems out there. As an American I believe our finest attribute is the spirit of compromise and curiousity with which we operate. We want information so that we can solve problems, in the hopes that if we keep solving them one-by-one, we can improve the lives of ourselves and others through voluntary cooperation. I look forward to the opportunity to add my name to this work.
+            During this time, I had the opportunity to work on deliverables for USAID government projects, as well as conducting research on barriers to business in the Western Balkans.
+          </p>
+          <h3>Future</h3>
+          <p>
+            I hope to find a stable job where myself and my girlfriend can live in peace, away from wildfires and somewhere we can build something positive.
           </p>
           <p>
             <b>I hope you enjoyed my website, feel free to email me at ibogley@uoregon.edu with suggestions or improvements! Thank you for reading!</b>
