--- a/bio/index.html
+++ b/bio/index.html
@@ -46,15 +46,19 @@
           </p>
           <h3>Graduate</h3>
           <p>
-            I had the opportunity to take the 1 year accelerated Applied Master's program here at the University of Oregon. My studies focused on Data Science, Empirical Research, Public Policy, and International Trade. I will graduate in December of 2021.
+            I had the opportunity to take the one year accelerated Applied Master's program here at the University of Oregon. My studies focused on Data Science, Empirical Research, Public Policy, and International Trade. I will graduate in December of 2021.
+          </p>
+          <h3>Volunteer Work: A Family for Every Child</h3>
+          <p>
+            Starting in July of 2020, I volunteered with AFFEC, helping out with general office tasks. This included creating instructional guides, monitoring email marketing successes, and data entry.
           </p>
           <h3>Summer 2021: Intern at International Development Group LLC</h3>
           <p>
-            During this time, I had the opportunity to work on deliverables for USAID government projects, as well as conducting research on barriers to business in the Western Balkans.
+            During this time, I had the opportunity to work on deliverables for USAID government projects, as well as conducting research on <a href="https://ibogley.github.io/website/projects/#hide1">barriers to business in the Western Balkans.</a>
           </p>
           <h3>Future</h3>
           <p>
-            I hope to find a stable job where myself and my girlfriend can live in peace, away from wildfires and somewhere we can build something positive.
+            I am currently looking for part time work in the fall, or for stable roles in economic growth/development or data analysis starting in January/February of 2022.
           </p>
           <p>
             <b>I hope you enjoyed my website, feel free to email me at ibogley@uoregon.edu with suggestions or improvements! Thank you for reading!</b>
