--- a/projects/index.html
+++ b/projects/index.html
@@ -8,6 +8,7 @@
     </div>
     <div class="topnav">
       <a href="https://ibogley.github.io/website/">Home</a>
+      <a href="https://ibolgey.github.io/website/expertise/">Expertise</a>
       <a href="https://ibogley.github.io/website/projects/">Projects</a>
       <a href="https://ibogley.github.io/website/documents/">Documents</a>
       <a href="https://ibogley.github.io/website/bio/">Biography</a>
