--- a/bio/index.html
+++ b/bio/index.html
@@ -43,7 +43,7 @@
           </p>
           <h3>Undergraduate</h3>
           <p>
-            I began my career at my hometown university of Oregon State, before transferring to the University of Oregon during my freshman year. Soon after, I switched my major from math to economics, while taking two minors in business administration and mathematics.
+            I began my career at my hometown university of Oregon State, before transferring to the University of Oregon during my freshman year. Soon after, I switched my major from math to economics, while taking two minors in business administration and mathematics. I graduated with a GPA of 3.62, 3.69 major GPA.
           </p>
           <h3>Graduate</h3>
           <p>
@@ -51,18 +51,26 @@
           </p>
           <h3>Volunteer Work: A Family for Every Child</h3>
           <p>
-            Starting in July of 2020, I volunteered with AFFEC, helping out with general office tasks. This included creating instructional guides, monitoring email marketing successes, and data entry.
+            Starting in July of 2020, I volunteered with AFFEC, taking a leadership role in maintaining an email marketing campaign for online seminars aimed at connecting foster children with potential adopters. I also assisted in streamlining data collection in the company SalesForce interface.
           </p>
           <h3>Summer 2021: Intern at International Development Group LLC</h3>
           <p>
             During this time, I had the opportunity to work on deliverables for USAID government projects, as well as conducting research on <a href="https://ibogley.github.io/website/projects/#hide1">barriers to business in the Western Balkans.</a>
           </p>
+          <h3>My Hobbies/Passions</h3>
+          <ul style="font-size:20px">
+            <li><strong>The 2008 Financial Crisis</strong>: I enjoyed watching <a href="https://en.wikipedia.org/wiki/The_Big_Short_(film)">The Big Short</a>, and have experience studying the advantages and risks of credit. I have a basic understanding of how a speculative market for mortgages, mixed with the invention of credit default swaps and risk trading assets helped fuel the crisis. This is in addition to my studies of international finance and monetary policy.</li>
+            <li><strong>History/Political Economy Analysis</strong>: I enjoy incrementally learning the history and current state of our world. Playing total war games (<a href="https://en.wikipedia.org/wiki/Total_War:_Shogun_2">Shogun 2</a>, <a href="https://en.wikipedia.org/wiki/Total_War:_Three_Kingdoms">Three Kingdoms</a>) especially helped encourage basic personal research into how and why nations are the way they are. This compliments other forrays into American, Russian, Japanese, Chinese, and European history.</li>
+            <li><strong>Housing</strong>: I personally have felt the effects of the affordable housing crisis. I have interest in helping others avoid this issue, assisting in incrementally improving economic mobility and preventing further income inequality.</li>
+            <li><strong>Credit</strong>: I have learned about how credit can help assist anti-poverty initiatives, especially micro-finance programs. I also have respect for the role that responsible debt can have in helping others achieve entrepreneurial and personal goals.</li>
+          </ul>
           <h3>Future</h3>
           <p>
-            I am currently looking for part time work in the fall, or for stable roles in economic growth/development or data analysis starting in January/February of 2022.
+            I am currently looking for roles in economic growth/development or data analysis starting in January/February of 2022.
           </p>
+          <br>
           <p>
-            <b>I hope you enjoyed my website, feel free to email me at ibogley@uoregon.edu with suggestions or improvements! Thank you for reading!</b>
+            <b>I hope you enjoyed my website, feel free to get in touch with me at ibogley@uoregon.edu!</b>
           </p>
           <p> <b>-- Ian</b> </p>
         </div>
