updated bio, fixed links

--- a/bio/index.html
+++ b/bio/index.html
@@ -45,17 +45,25 @@
           <p>
             I began my career at my hometown university of Oregon State, before transferring to the University of Oregon during my freshman year. Soon after, I switched my major from math to economics, while taking two minors in business administration and mathematics. I graduated with a GPA of 3.62, 3.69 major GPA.
           </p>
+          <h3>Volunteer Work: ShelterCare</h3>
+          <p>
+            Over the course of a month, I wrote a <a href="https://ibogley.github.io/website/projects/#show_emp">report</a> summarising the effective usage of employee satisfaction survey data. This document is used to design future surveys, interpret statistics, and use them to improve workplace metrics.
+          </p>
           <h3>Graduate</h3>
           <p>
-            I had the opportunity to take the one year accelerated Applied Master's program here at the University of Oregon. My studies focused on Data Science, Empirical Research, Public Policy, and International Trade. I will graduate in December of 2021.
+            I had the opportunity to take the one year accelerated Applied Master's program here at the University of Oregon. My studies focused on Data Science, Empirical Research, Public Policy, and International Trade. I graduated in December of 2021.
           </p>
           <h3>Volunteer Work: A Family for Every Child</h3>
           <p>
-            Starting in July of 2020, I volunteered with AFFEC, taking a leadership role in maintaining an email marketing campaign for online seminars aimed at connecting foster children with potential adopters. I also assisted in streamlining data collection in the company SalesForce interface.
+            From July of 2020 to January of 2021, I volunteered with AFFEC to encourage the success of biweekly seminars aimed at connecting foster children and potential adopting families. My role included writing surveys for attendees, collecting data on attendance, updating email marketing materials, and maintaining a database of foster children and adopting families.
           </p>
           <h3>Summer 2021: Intern at International Development Group LLC</h3>
           <p>
-            During this time, I had the opportunity to work on deliverables for USAID government projects, as well as conducting research on <a href="https://ibogley.github.io/website/projects/#hide1">barriers to business in the Western Balkans.</a>
+            I worked on USAID and MCC Economic Development contracts. A notable example was an MCC Road Improvement project in Niger, where I used Excel to create visuals for road usage patterns and assisted in writing various sections of a baseline data report. Other tasks I was assigned included scoping potential competitors for future RFP's and creating a spreadsheet of subcontractors with their relevant sectoral expertise. I also conducted research on the <a href="https://ibogley.github.io/website/projects/#show_wb">barriers to business in the Western Balkans</a>, which I presented to the company at large.
+          </p>
+          <h3>Winter 2021-Spring 2022: Local Government Fiscal Note Analyst</h3>
+          <p>
+            Currently, I am creating fiscal notes for local governments associated with bills for the Washington State 2022 Legislative Session. Working in the Washington State Department of Commerce in the Local Government Division, I write budget impact summaries for potential legislation regarding energy policy, infrastructure, economic development, telecommunications, and financial institutions.
           </p>
           <h3>My Hobbies/Passions</h3>
           <ul style="font-size:20px">
@@ -70,7 +78,7 @@
           </p>
           <br>
           <p>
-            <b>I hope you enjoyed my website, feel free to get in touch with me at ibogley@uoregon.edu!</b>
+            <b>I hope you enjoyed my website, feel free to get in touch with me at ianbogley8@gmail.com!</b>
           </p>
           <p> <b>-- Ian</b> </p>
         </div>
